--- a/public/errors/403.html
+++ b/public/errors/403.html
@@ -26,7 +26,7 @@
     <h1>You are denied because one of following reasons</h1>
     <ul>
       <li>Your host is not in Japan (restricted due to massive spams from China)</li>
-      <li>Massive access from you or other users in same provider with your</li>
+      <li>Massive access from you or other users in same provider with you</li>
     </ul>
 <iframe src="http://rcm-jp.amazon.co.jp/e/cm?t=maiha-22&o=9&p=8&l=as1&asins=B00276HOAY&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
   </div>
